# pydantic-torch

./: .gitignore  LICENSE  README.md  how_to_use.py  pyproject.toml
examples/: resnet.py  vit.py
pydantic_torch/: containers.py  conv.py  modules.py  nn.py  utils.py  vit.py
pydantic_torch_safe/: modules.py  nn.py  utils.py  vit.py
tests/: test_mnist_train.py  test_modules.py  test_vit.py
