[project]
name = "pydantic-torch"
version = "0.1.0"
description = "Pydantic + PyTorch hybrid module utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "torch>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "torchvision>=0.25.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/.data",
  "/.pytest_cache",
  "/.venv",
  "/.venv.linux",
  "/dist",
  "/pydantic_torch/__pycache__",
]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/pydantic_torch",
]

[tool.hatch.build.targets.wheel]
packages = ["pydantic_torch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
